style.css
/* #region global definitions */
.d_none {
    display: none;
}

.d_flex {
    display: flex;
}

p {
    color: var(--color-font-dark);
    font-family: 'Palanquin';
    font-weight: 500;
    line-height: 120%;
    font-size: 16px;
}

h2 {
    font-size: 32px;
    color: var(--color-bg-accent);
    font-family: 'Palanquin';
    font-weight: 700;
    line-height: 120%;
}

h3 {
    font-size: 24px;
    color: var(--color-font-dark);
    font-family: 'Palanquin';
    font-weight: 600;
    line-height: 100%;
}

ul {
    list-style-type: none;
}
/* #endregion global definitions */

.hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-inline: 16px;
    padding-top: 24px;
    width: 100%;

    .hero_img_wrapper {
        position: relative;
        margin-bottom: 100px;

        .hero_img {
            width: calc(100svw - 32px);
            height: calc(100svw - 32px);
            object-fit: cover;
            border-radius: 16px;
        }

        .hero_logo {
            width: var(--size-logo-hero);
            height: var(--size-logo-hero);
            border-radius: 50%;
            border: 13px solid var(--color-bg-accent);
            background-color: var(--color-bg-accent);
            position: absolute;
            bottom: 0;
            left: 50%;
            transform: translateX(-50%) translateY(50%);
        }
    }

    .rating_stats_wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 16px;

        .rating_stats {
            display: flex;
            justify-content: space-evenly;
            gap: 5px;
            padding-block: 5px;
            background-color: var(--color-bg-accent-strong);
            border-radius: 4px;
            width: 120px;
        }

        h1 {
            font-family: 'Palanquin Dark';
            font-weight: 700;
            font-size: 40px;
            color: var(--color-font-dark);

            span {
                color: var(--color-bg-shell);
            }
        }
    }

    p {
        font-family: 'Palanquin';
        font-weight: 700;
        font-size: 22px;
        color: var(--color-font-dark);
        text-align: center;
    }

    .rating {
        font-family: 'Palanquin Dark';
        font-size: 20px;
        font-weight: 400;
    }

    .rating_counter {
        width: 40px;
        font-family: 'Palanquin';
        font-size: 18px;
        font-weight: 400;
        color: var(--color-font-weak);
    }
}

.content_main {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
    gap: 30px;

    .content_main_content {
        display: flex;
        flex-direction: column;
        align-items: space-between;
        justify-content: space-between;
    }
}

.content_main_nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
    overflow: hidden;

    ul {
        display: flex;
        justify-content: flex-start;
        align-items: center;

        height: var(--height-nav-category);

        gap: 5px;
        padding-inline: 30px;

        background-color: var(--color-bg-accent);
        overflow: hidden;

        border-top-left-radius: 30px;
        border-bottom-left-radius: 30px;

        li {
            a {
                font-size: 28px;
                color: var(--color-font-dark);
                font-family: 'Palanquin';
                font-weight: 600;
                line-height: 100%;
                text-align: left;
            }

            a:visited {
                color: inherit;
            }

            a:hover,
            a:active {
                color: var(--color-bg-shell);
            }
        }

        hr {
            height: 100%;
            border: 2px solid var(--color-bg-accent-strong);
            margin-inline: 8px;
        }
    }

    ul:hover {
        overflow-x: auto;
    }
}

.content_wrapper {
    width: 100%;

    .category_content_wrapper {
        margin-top: calc(var(--height-category) + 32px);
    }

    .category_headline_wrapper {
        height: var(--height-category);
        padding-top: var(--padding-category-top);

        width: 100dvw;
        position: absolute;
        left: 0;

        .category_headline {
            width: 100%;
            height: 100%;
            background-color: var(--color-bg-shell);

            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;

            position: relative;

            img {
                position: absolute;
                bottom: calc(var(--height-category_headline) - 10px);

                width: var(--size-category-icon-mobile);
                height: var(--size-category-icon-mobile);
                object-fit: contain;
            }

            h2 {
                color: var(--color-font-bright);
                span {
                    font-weight: 400;
                }
            }
        }
    }

    .category_content_wrapper {
        display: flex;
        flex-direction: column;
        gap: 16px;

        .food_item {
            background-color: var(--color-bg-accent);
            border-radius: 12px;
            padding: 10px;

            display: flex;
            flex-direction: column;
            justify-content: flex-start;
            gap: 8px;

            img {
                width: 100%;
                height: 86px;
                object-fit: cover;
                border-radius: 12px;
            }

            .food_item_description {
                display: flex;
                flex-direction: column;
                flex-grow: 1;
                gap: 8px;

                p {
                    display: -webkit-box;
                    line-clamp: 3;
                    -webkit-line-clamp: 3;
                    -webkit-box-orient: vertical;
                    overflow: hidden;
                }

                p:hover {
                    z-index: 2;
                    overflow: visible;
                }
            }

            .food_item_pricing {
                margin-block: 8px;
                display: flex;
                justify-content: space-between;

                button {
                    background-color: white;
                    padding: 5px 8px;
                    border-radius: 20px;

                    p {
                        font-weight: 600;
                    }
                }

                button:hover {
                    p {
                        color: var(--color-bg-shell);
                    }
                    box-shadow: 1px 2px 2px 0px #00000033;
                }
            }
        }

        .food_item:hover {
            box-shadow: 2px 2px 4px 0px #00000026;
        }
    }
}

.on_desktop {
    display: none;
}

.on_mobile {
    display: initial;
}

dialog {
    padding: 32px;
    width: calc(100svw - 32px);
    height: 270px;

    margin: auto;
    border: 0;
    z-index: 2;
    background-color: var(--color-bg-overlay);
    border-radius: 30px;

    .dialog_content_wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 100%;

        img {
            width: 80px;
            margin-bottom: 16px;
            animation: moveInOutCar 1.5s infinite ease-in-out forwards;
        }

        h1,
        h2 {
            color: var(--color-bg-accent);
            line-height: 120%;
            font-family: 'Palanquin';
            font-weight: 700;
        }

        h1 {
            font-size: 36px;
        }

        h2 {
            font-size: 24px;
        }
    }
}

dialog.opened::backdrop {
    background-color: #45444466;
    opacity: 0.75;
    transition: all 1s ease-in-out;
}

@media screen and (min-width: 769px) {
    .on_desktop {
        display: initial;
    }

    .on_mobile {
        display: none;
    }

    .scroll_none {
        overflow-y: auto;
    }

    .content_main {
        .content_main_content {
            flex-direction: row;
            align-items: flex-start;
        }
    }

    .content_wrapper {
        width: calc(100% - var(--width-basket));

        .category_headline_wrapper {
            .category_headline {
                flex-direction: row;
                justify-content: flex-start;

                img {
                    width: var(--size-category-icon-desktop);
                    height: var(--size-category-icon-desktop);
                    bottom: 0;
                    left: var(--padding-category-icon);
                }

                h2 {
                    position: relative;
                    left: var(--padding-category-text);
                }
            }
        }

        .category_content_wrapper {
            max-width: 90%;

            .food_item {
                flex-direction: row;
                justify-content: flex-start;

                height: 140px;

                img {
                    height: 100%;
                    min-width: 30%;
                    max-width: 30%;
                }

                .food_item_pricing {
                    flex-direction: column;
                    align-items: flex-end;

                    button {
                        min-width: clamp(70px, calc((100svw - 850px) * 45 / 100 + 70px), 115px);
                    }

                    h3 {
                        text-align: right;
                        min-width: 100px;
                    }
                }
            }
        }
    }

    .hero {
        padding-top: 0;
        padding-inline: 0;

        .hero_img_wrapper {
            .hero_img {
                width: 100%;
                height: 100%;
                border-radius: 0;
            }

            .hero_logo {
                transform: translateX(-50%) translateY(33%);
            }
        }

        .rating_stats_wrapper {
            flex-direction: row;
            .rating_stats {
                order: 1;
            }
        }

        > p {
            max-width: 768px;
        }
    }

    dialog {
        width: 415px;
    }
}

@media screen and (min-width: 1441px) {
    .hero {
        padding-inline: calc(50% - 720px);
    }
}

